Add mobile optimized to TouchEvent Timeout For Android WebView

Due to an unfortunate factoring oversight, the InputRouter was never informed of the
mobile-optimized status from frame metadata.  This means that the touch event
timeout was globally applied for Android WebView.

This patch forwards the notification appropriately to the input router, so
that the timeout is limited to when viewing oversized ("desktop") pages in
WebView (just like in Chrome for Android).

BUG=645337

Review-Url: https://codereview.chromium.org/2304043002
Cr-Commit-Position: refs/heads/master@{#417869}

Former-commit-id: e68beb5d5b4092c21ff77c0b9db69c4729bc99b9